src/App.css
.App {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  height: 100vh;
}

body {
  text-align: center;
  font-size: 1em;
  font-family: 'Helvetica', 'Arial', sans-serif;
  margin: 0;
}

h1 {
  font-size: 32px;
  padding: 10px 0;
  border-bottom: 1px solid #D3D6DA;
  color: #333;
  width: 100%;
  margin: 0px;
}

.board {
  display: flex;
  align-items: center;
  justify-content: center;
}

.row {
  text-align: center;
  display: flex;
  justify-content: center;
}

.row > div {
  display: block;
  width: 60px;
  height: 60px;
  border: 2px solid #D3D6DA;
  margin: 2.5px;
  text-align: center;
  line-height: 60px;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 2em;
  color: #000;
}

.row > div.green {
  --background: #6AA964;
  --border-color: #6AA964;
  animation: flip 0.5s ease forwards;
}

.row > div.grey {
  --background: #787C7E;
  --border-color: #787C7E;
  animation: flip 0.5s ease forwards;
}

.row > div.yellow {
  --background: #C9B458;
  --border-color: #C9B458;
  animation: flip 0.5s ease forwards;
}

.row > div:nth-child(2) {
  animation-delay: 0.2s;
}

.row > div:nth-child(3) {
  animation-delay: 0.4s;
}

.row > div:nth-child(4) {
  animation-delay: 0.6s;
}

.row > div:nth-child(5) {
  animation-delay: 0.8s;
}

.row.current > div.filled {
  animation: bounce 0.2s ease-in-out forwards;
}

.modal {
  background: rgba(255,255,255,0.7);
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}

.modal > div {
  max-width: 400px;
  background: #FFF;
  padding: 40px;
  border-radius: 10px;
  margin: 15% auto;
  box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
}

.won {
  color: #6AA964;
  font-size: 20px;
}

.lost {
  color: red;
  font-size: 20px;
}

.try-again {
  font-size: 12px;
}

.keypad {
  max-width: 500px;
  margin: 20px auto;
}

.keypad > div {
  margin: 3px;
  width: 43px;
  height: 58px;
  font-size: 14px;
  background: #D3D6DA;
  display: inline-block;
  border-radius: 6px;
  line-height: 58px;
  text-transform: uppercase;
  font-weight: bold;
  cursor: pointer;
}

.keypad > div.large {
  width: 60px;
}

.keypad > div.green {
  background: #6AA964;
  color: #fff;
  transition: all 0.3s ease-in;
}

.keypad > div.yellow {
  background: #C9B458;
  color: #fff;
  transition: all 0.3s ease-in;
}

.keypad > div.grey {
  background: #787C7E;
  color: #fff;
  transition: all 0.3s ease-in;
}

.shake-row {
  animation: shake 0.82s cubic-bezier(.36, .7, .19, .97) both;
  transform: translate3d(0, 0, 0);
  backface-visibility: hidden;
  perspective: 1000px;
}

@keyframes flip {
  0% {
    transform: rotateX(0);
    background: #FFF;
    border-color: #787C7E;
  }
  45% {
    transform: rotateX(90deg);
    background: #FFF;
    border-color: #787C7E;
  }
  55% {
    transform: rotateX(90deg);
    background: var(--background);
    border-color: var(--border-color);
  }
  100% {
    transform: rotateX(0deg);
    background: var(--background);
    border-color: var(--border-color);
    color: #FFF;
  }
}

@keyframes bounce {
  0% { 
    transform: scale(1);
    border-color: #FFF;
  }
  50% { 
    transform: scale(1.2);
  }
  100% {
    transform: scale(1);
    border-color: #787C7E;
  }
}

@keyframes shake {
  10%, 90% { 
    transform: translate3d(-1px, 0, 0)
  }
  20%, 80% { 
    transform: translate3d(2px, 0, 0)
  }
  30%, 50%, 70% { 
    transform: translate3d(-4px, 0, 0)
  }
  40%, 60% { 
    transform: translate3d(4px, 0, 0)
  }
}

